--- a/disciplina/templates/disciplina/listar.html
+++ b/disciplina/templates/disciplina/listar.html
@@ -37,4 +37,16 @@
         </div>
     </div>
 </div>
+
+<nav aria-label="Navegação de página exemplo">
+  <ul class="pagination">
+      {% for pagina in disciplinas.paginator.page_range %}
+        {% if disciplinas.number == pagina %}
+          <li class="page-item active"><a class="page-link" href="?p={{ pagina }}">{{ pagina }}</a></li>
+        {% else %}
+          <li class="page-item"><a class="page-link" href="?p={{ pagina }}">{{ pagina }}</a></li>
+        {% endif %}
+  {% endfor %}
+  </ul>
+</nav>
 {% endblock %}
