--- a/disciplina/templates/disciplina/listar.html
+++ b/disciplina/templates/disciplina/listar.html
@@ -4,7 +4,24 @@
 
 <div class="row">
     <div class="col-lg-12" >
+
+         {% if 'disciplina' not in request.path %}
+            <br><br>
+            <form method="get" action="{% url 'disciplina:busca' %}">
+                <div class="form-group row">
+                    <div class="col-12">
+                        <input class="form-control"
+                               type="search" value="{{ request.GET.termo }}"
+                               id="search-input"
+                               placeholder="Digite sua pesquisa"
+                               name="termo">
+                    </div>
+                </div>
+            </form>
+            {% endif %}
         <div class="card-columns">
+
+
 
             {% for disciplina in disciplinas %}
             <div class="card" style="width: 18rem;">
