--- a/professor/templates/professor/cadastrarDisc.html
+++ b/professor/templates/professor/cadastrarDisc.html
@@ -12,6 +12,14 @@
     <div class="card-body">
         <form method="POST" action="{% url 'professor:cadastrarDisc' %}" enctype="multipart/form-data">
             {% csrf_token %}
+            <div class="col-md-12 ">
+            <div class="form-group">
+               <label for="nome">Professor</label>
+              <input type="text" name="nome" value="{{request.user.first_name}}" class="form-control">
+            </div>
+        </div>
+
+
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="nome">Nome</label>
