alterações do status

--- a/professor/templates/professor/alterarStatusReserva.html
+++ b/professor/templates/professor/alterarStatusReserva.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
 
             <table class="table">
-                {{ form }}
+                {{ form|crispy }}
             </table>
             <div class="row">
                 <div class="col">
