--- a/professor/templates/professor/cadastroProfessor.html
+++ b/professor/templates/professor/cadastroProfessor.html
@@ -17,7 +17,7 @@
            <div class="col-md-12 ">
             <div class="form-group">
                <label for="nome">Nome</label>
-              <input type="text" name="nome" value="{{request.user.first_name}}" class="form-control">
+              <input type="text" name="nome" class="form-control">
             </div>
         </div>
 
