--- a/professor/templates/professor/editarDisciplina.html
+++ b/professor/templates/professor/editarDisciplina.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {%block conteudo%}
+{% load crispy_forms_tags %}
+
 <div class="card mb-3">
     <div class="card-header">
         <i class="fa fa fa-institution"></i>Alterar Disciplina
@@ -9,7 +11,7 @@
 	{% csrf_token %}
     <table class="table">
 
-        {{ form}}
+        {{ form|crispy}}
 
     </table>
 
