--- a/user/templates/user/password-reset.html
+++ b/user/templates/user/password-reset.html
@@ -1,9 +1,14 @@
+{% load crispy_forms_tags %}
 
-<h3>Recuperar Senha</h3>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
 
-    <button type="submit">Enviar</button>
-  </form>
-
+<div class="container p-5">
+    <h2 class="font-weight-bold mt-3">Recuperar Senha</h2>
+    <hr>
+    <form method="POST">
+        {% csrf_token %}
+        {{form|crispy}}
+        <br/>
+        <br/>
+        <button class="btn btn-primary" type="submit">Enviar</button>
+    </form>
+</div>
