atualizações do projeto

--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -1,2 +1,6 @@
-<h2>Password changed with success!</h2>
-<p>You may now <a href="{% url 'user:user_login' %}">log in</a> again.</p>
+<div class="container p-4">
+	    <h2 class="font-weight-bold mt-3">Redefinição de senha concluída</h2>
+		<hr>
+        <p>Sua senha foi definida.</p>
+        <a href="{% url 'user:user_login' %}" class="btn btn-primary">Login</a>
+</div>
