--- a/professor/templates/professor/listarPedidosReserva.html
+++ b/professor/templates/professor/listarPedidosReserva.html
@@ -12,7 +12,7 @@
       <tr>
 
         <th scope="col">Disciplina</th>
-        <th scope="col">Usuario</th>
+        <th scope="col">Solicitante</th>
         <th scope="col">Professor</th>
         <th scope="col">Status</th>
         <th scope="col">Data Reserva</th>
