--- a/user/templates/user/minhasDisciplinas.html
+++ b/user/templates/user/minhasDisciplinas.html
@@ -10,7 +10,7 @@
       <thead>
       <tr>
         <th scope="col">Disciplina</th>
-        <th scope="col">Agendamento</th>
+        <th scope="col">Status</th>
         <th scope="col">Data Agendamento</th>
 
       </tr>
