--- a/professor/templates/professor/cadastroProfessor.html
+++ b/professor/templates/professor/cadastroProfessor.html
@@ -13,35 +13,7 @@
     <div class="card-body">
      <form method="POST" action="{% url 'professor:cadastroProfessor' %}" enctype="multipart/form-data">
          {% csrf_token %}
-
-        <div class="col-md-12 ">
-            <div class="form-group">
-               <label for="nome">Nome</label>
-              <input type="text" name="nome" value="{{request.user.username}}" class="form-control">
-            </div>
-        </div>
-
-   
-         <div class="col-md-12 ">
-             <div class="form-group">
-                 <label for="descricao_curta">Perfil</label>
-                 <textarea name="descricao_curta" cols="140" rows="5" class="form-control" required=""
-                           id="descricao_curta"></textarea>
-             </div>
-         </div>
-         <div class="col-md-12 ">
-             <div class="form-group">
-                 <label for="descricao_longa">Formação</label>
-                 <textarea name="descricao_longa" cols="140" rows="5" class="form-control" required=""
-                           id="descricao_longa"></textarea>
-             </div>
-         </div>
-         <div class="col-md-12 ">
-             <div class="form-group">
-                 <label for="imagem">imagem</label>
-                 <input type="file" name="imagem" class="form-control">
-             </div>
-         </div>
+          {{form|crispy}}
 
           <div class="row">
                 <div class="col">
@@ -50,6 +22,7 @@
                 </div>
 
             </div>
+
       </form>
 </div>
 </div>
