--- a/professor/templates/professor/detalhesProfessor.html
+++ b/professor/templates/professor/detalhesProfessor.html
@@ -36,10 +36,14 @@
                 <td></td>
                 {% endif %}
 
-
+                {% if user.is_authenticated %}
+                 {% if user.status == 'professor' %}
                 <td>
                     <a class="btn btn-info" href="{% url 'professor:editarProfessor' professor.id %}">Editar</a>
                 </td>
+                {% endif %}
+
+                {% endif %}
 
             </tr>
             {% endfor %}
