adicionando atualizacoes finais

--- a/professor/templates/professor/cadastroProfessor.html
+++ b/professor/templates/professor/cadastroProfessor.html
@@ -8,7 +8,7 @@
 
 <div class="card mb-3">
     <div class="card-header">
-        <i class="fa fa fa-institution"></i>Perfil Professor
+        <i class="fa fa-address-card"></i>Perfil Professor
     </div>
     <div class="card-body">
      <form method="POST" action="{% url 'professor:cadastroProfessor' %}" enctype="multipart/form-data">
