--- a/accounts/templates/accounts/password-reset.html
+++ b/accounts/templates/accounts/password-reset.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_tags %}
 
 
-<div class="container p-5">
+<div class="container p-5" align="center">
     <h2 class="font-weight-bold mt-3">Recuperar Senha</h2>
     <hr>
     <form method="POST">
