--- a/user/templates/user/minhasDisciplinas.html
+++ b/user/templates/user/minhasDisciplinas.html
@@ -10,6 +10,8 @@
       <thead>
       <tr>
         <th scope="col">Disciplina</th>
+        <th scope="col">Titulo</th>
+        <th scope="col">Professor</th>
         <th scope="col">Status</th>
         <th scope="col">Data Agendamento</th>
 
@@ -21,6 +23,10 @@
 
         <td>{{ usuariodisciplina.disciplina.nome }}</td>
 
+        <td>{{usuariodisciplina.disciplina.titulo}}</td>
+
+        <td>{{usuariodisciplina.professor.nome}}</td>
+
         <td>{{usuariodisciplina.status}}</td>
 
 
@@ -29,11 +35,14 @@
 
         {% if usuariodisciplina.imagem %}
         <td><img width="50px" height="50px" src="{{ usuariodisciplina.imagem.url  }}"></td>
+
         {%else%}
         <td></td>
         {% endif %}
 
+      <td>
 
+      </td>
       </tr>
       {% endfor %}
       </tbody>
