--- a/user/templates/user/user_login.html
+++ b/user/templates/user/user_login.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 {% load static %}
+{% load socialaccount %}
 <html lang="en">
 
 <head>
@@ -32,7 +33,7 @@
                 <h3>SAsP</h3>
                 <div class="d-flex justify-content-end social_icon">
                     <!--<span><i class="fab fa-facebook-square"></i></span>-->
-                   <!-- <span><i class="fab fa-google-plus-square"> </i></span>-->
+                    <a href="{% provider_login_url 'google' %}"><span><i class="fab fa-google-plus-square"></i></span></a>
 
                      </div>
                 </div>
